# index-dm

./: README.md  package-lock.json  package.json  tsconfig.json
components/: theme-provider.tsx
components/ui/: input.tsx
pages/: _app.tsx  _document.tsx  _layout.tsx  index.tsx
pages/downloads/: download.tsx  page.tsx
pages/home/: navbar.tsx  page.tsx
pages/login/: page.tsx
pages/settings/: behavior.tsx  network.tsx  page.tsx
src/: Cargo.toml  tauri.conf.json
src/src/: config.rs  ext.rs  main.rs  net.rs  patch.rs  util.rs
styles/: globals.css
