[package]
name = "app"
version = "0.1.0"
description = ""
authors = [""]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
# tauri
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ["api-all"] }

# tokio
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"

# anyhow
anyhow = "1.0.81"

# bt
librqbit = "5.5.4"

# ext
winapi = { version = "0.3", features = ["winuser", "winbase"] }

# patcher
xdelta3 = "0.1.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
